
5.2b1 -> 5.3a1
    - jbj: rpmio: add fdInitHmac()/rpmHmacInit() methods for HMAC generation.
    - jbj: rpmio: stub-in the data elements needed for keyed hashes.
    - jbj: rpmio: fix: unbreak --alldigests.
    - jbj: rpmio: factor digest insturmentation out of loops for --stats.
    - jbj: attach buildids to file provides in header metadata.
    - jbj: fix: ensure new ordering queue additions follow older using a
	generation counter.
    - jbj: macros: split rpmbuild macros into /usr/lib/rpm/macros.rpmbuild.
    - jbj: macros: automagic dependency extractors are now per-interpreter.
    - jbj: macros: refactor perl/php/python peculier config into separate file.
    - jbj: macros: expand %{load:...} immediiately/recursively when loading.
    - jbj: macros: gather "default" config into macros/ dir for refactoring.
    - proyvind: rpmevr: make rpmEVRparse() work with missing values.
    - proyvind: rpm46compat: Implement RPM 4.6 API wrapper providing ~seamless
	API compatibility for the function wrappers provided. :)
    - proyvind: python: start on implementing proper regression tests.
    - proyvind: js: fix internal build on Linux.
    - proyvind: filetriggers: fix missing file suffix for scripts. (from unity linux).
    - proyvind: rpm4compat: add wrappers for renamed rpmdb*->rpmmi* functions.
    - proyvind: python: add te.D() to return element distepoch.
    - jbj: blake: validate 224/256 reference blake against 8bit 0x00.
    - proyvind: python: handle None values in labelCompare() again.
    - proyvind: python: handle DISTEPOCH in labelCompare().
    - jbj: rpmdigest: add ECHO 224/256/384/512.
    - jbj: rpmdigest: add FUGUE 224/256/384/512.
    - jbj: rpmdigest: add SHAVITE3 224/256/384/512.
    - jbj: rpmdigest: add LANE 224/256/384/512.
    - jbj: rpmdigest: add HAMSI 224/256/384/512.
    - jbj: rpmdigest: add GROESTL 224/256/384/512.
    - jbj: rpmdigest: add JH 224/256/384/512.
    - jbj: rpmdigest: add CHI 224/256/384/512.